--- a/index.html
+++ b/index.html
@@ -59,15 +59,14 @@
                     </h1>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-md-5 col-xl-3 mycol align-middle">
-                        <h2>Todo</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil, aliquam!</p>
-                    </div>
-                    <div class="col-xl-3 col-md-5 col-xl-3 mycol">ffhuf</div>
-                    <div class="col-xl-3 col-md-5 col-xl-3 mycol">ffhuf</div>
-                    <div class="col-xl-3 col-md-5 col-xl-3 mycol">ffhuf</div>
-                    <div class="col-xl-3 col-md-5 col-xl-3 mycol">ffhuf</div>
-                    <div class="col-xl-3 col-md-5 col-xl-3 mycol">ffhuf</div>
+                    <a href=" https://raj-27.github.io/Number-guess/" class="col-12 col-md-5 col-xl-3 mycol align-middle fs-2  text-light">
+                        Number guess
+                    </a>
+                    <a href="#" class="col-xl-3 col-md-5 col-xl-3 mycol">ffhuf</a>
+                    <a href="#" class="col-xl-3 col-md-5 col-xl-3 mycol">ffhuf</a>
+                    <a href="#" class="col-xl-3 col-md-5 col-xl-3 mycol">ffhuf</a>
+                    <a href="#" class="col-xl-3 col-md-5 col-xl-3 mycol">ffhuf</a>
+                    <a href="#" class="col-xl-3 col-md-5 col-xl-3 mycol">ffhuf</a>
 
                 </div>
             </div>
